@@ -4792,12 +4792,16 @@ a)"xI
 /(*MARK:A\x00b)/mark,alt_verbnames
     abc
 
-# /(*MARK:A\x00b)/
-/28 2a 4d 41 52 4b 3a 41 00 62 29/mark,hex
+/"(*MARK:A" 00 "b)"/mark,hex
     abc
 
-# /(*MARK:A\x00b)/
-/28 2a 4d 41 52 4b 3a 41 00 62 29/mark,hex,alt_verbnames
+/"(*MARK:A" 00 "b)"/mark,hex,alt_verbnames
     abc
+
+/efg/hex
+
+/eff/hex
+
+/effg/hex
 
 # End of testinput2 
